--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.citizen">
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ImagePage"></activity>
+        <activity android:name=".MenuActivity"></activity>
+        <activity android:name=".LoginAdminActivity" />
+        <activity android:name=".ImagePage" />
         <activity android:name=".FailComplaint" />
         <activity android:name=".ComplaintStatus" />
         <activity android:name=".ComplaintRegistration" />
