--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewDetective"></activity>
+        <activity android:name=".DetectiveActivity"></activity>
+        <activity android:name=".DetectiveLogin" />
+        <activity android:name=".NewDetective" />
         <activity android:name=".MenuActivity" />
         <activity android:name=".LoginAdminActivity" />
         <activity android:name=".ImagePage" />
