--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".eachcasedetails"></activity>
+        <activity android:name=".AddAdmin"></activity>
+        <activity android:name=".eachcasedetails" />
         <activity android:name=".CaseDetails" />
         <activity android:name=".NewDetective" />
         <activity android:name=".MenuActivity" />
